[package]
name = "authz"
description = "Permission-based authorization library"
version = "0.1.0"
authors = ["Darin Gordon <dkcdkg@gmail.com>"]
build = "build.rs"
license = "Apache-2.0"
homepage = "https://github.com/Dowwie/rust-authz"
readme = "README.md"

[features]
default = ["serde_codegen"]
nightly = ["serde_derive"]

[build-dependencies]
serde_codegen = { version = "^0.8", optional = true }

[dependencies]
serde = "^0.8"
serde_derive = { version = "^0.8", optional = true }
serde_json = "^0.8"
libc = "0.2"
seahash = "3.0.5"

[dev-dependencies]
bencher = "0.1.2"

[lib]
crate-type = ["cdylib", "rlib"]
